// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderPaymentCardReaderChargeDetails renders reader charges 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  color: #23282d;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-8 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-10>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-10>* {
  min-width: 0;
}

.emotion-10:first-of-type {
  border-top: none;
}

.emotion-10:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-10:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    id=""
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card woocommerce-table transactions-list woocommerce-report-table has-search has-actions has-menu emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Card readers
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.5 15v5H20v-5h-1.5zM4 15v5h1.5v-5H4zm0 5h16v-1.5H4V20z"
                />
                <path
                  d="M12.25 16L6.5 10.75M12.25 16V3M12.25 16l5.25-5.25"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                />
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Export
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-labelledby="caption-1"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-1"
              >
                Card readers
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Reader id
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Transactions
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Fee
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item is-left-aligned"
                    scope="row"
                  >
                    1
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    active
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    3
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    $3.00
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item is-left-aligned"
                    scope="row"
                  >
                    2
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    inactive
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    1
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    $0.00
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer emotion-10 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        />
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`RenderPaymentCardReaderChargeDetails renders without reader charges 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  color: #23282d;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-8 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-10>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-10>* {
  min-width: 0;
}

.emotion-10:first-of-type {
  border-top: none;
}

.emotion-10:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-10:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    id=""
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card woocommerce-table transactions-list woocommerce-report-table has-search has-actions has-menu emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Card readers
          </h2>
          <div
            class="woocommerce-table__actions"
          />
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Card readers
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Reader id
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Transactions
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    >
                      Fee
                    </span>
                  </th>
                </tr>
                <tr>
                  <td
                    class="woocommerce-table__empty-item"
                    colspan="4"
                  >
                    No data to display
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer emotion-10 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        />
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
